--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
+
+*{
+  margin: 0;
+padding: 0;
+}
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* width: 80%; */
+  margin: auto;
+  display: flex !important;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid red;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* .App > div {
+  width:50%;
+} */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media all and (max-width: 900px) {
+
+  .App {
+   
+    display: inline-block !important;
+    justify-content: center !important;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
 }
